# pytorch-hexagdly

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE.md  README.md  conftest.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
notebooks/: example_utils.py  hexagdly_2d_example.ipynb  hexagdly_cnn_example.ipynb  hexagdly_custom_kernels_example.ipynb  hexagdly_hex_vs_square.ipynb  hexagdly_tools.py  how_to_apply_adressing_scheme.ipynb
src/: hexagdly.py
src/pytorch_hexagdly/: __init__.py
tests/: test_Conv2d.py  test_Conv2d_Custom.py  test_Conv2d_CustomKernel.py  test_Conv3d.py  test_Conv3d_CustomKernel.py  test_MaxPool2d.py  test_MaxPool3d.py  test_share_neighbors.py
